RESOLVED FIXED80825
REGRESSION (r110371): broke platform/gtk/scrollbars/overflow-scrollbar-horizontal-wheel-scroll.html
https://bugs.webkit.org/show_bug.cgi?id=80825
Summary REGRESSION (r110371): broke platform/gtk/scrollbars/overflow-scrollbar-horizo...
Philippe Normand
Reported 2012-03-12 01:55:16 PDT
http://trac.webkit.org/changeset/110371 broke that test. Diff: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/platform/gtk/scrollbars/overflow-scrollbar-horizontal-wheel-scroll-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/platform/gtk/scrollbars/overflow-scrollbar-horizontal-wheel-scroll-actual.txt @@ -1,4 +1,46 @@ +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello world this is a long string and will not wrap. Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello +Hello Test for bug 29348: This tests that using the mouse wheel while having the pointer in a horizontal scrollbar makes it scroll horizontally, also with styled scrollbars. On success, the vertical offset for both divs should be 80, and the horizonta 40. -Scroll offset for 'overflow' is 80 and 40 -Scroll offset for 'styled' is 80 and 40 +FAILED Not sure what's going on. CCing Gustavo who wrote the test and Roger who wrote the "problematic" patch :) For now I'll skip this test in GTK.
Attachments
Patch (1.48 KB, patch)
2012-03-12 14:25 PDT, Robert Kroeger
no flags
Patch (2.01 KB, patch)
2012-03-12 14:49 PDT, Robert Kroeger
no flags
Patch (2.11 KB, patch)
2012-03-14 10:51 PDT, Robert Kroeger
no flags
Robert Kroeger
Comment 1 2012-03-12 06:31:47 PDT
I'll look into it. My patch would definitely be suspicious here.
Robert Kroeger
Comment 2 2012-03-12 14:25:42 PDT
Robert Kroeger
Comment 3 2012-03-12 14:27:10 PDT
gns@: pnormand@: could one of you review? The attached patch ought to fix this.
Philippe Normand
Comment 4 2012-03-12 14:33:48 PDT
CCing James Robinson who reviewed the original patch. Also Robert, would you mind unskipping the test please? Thanks a lot for taking care of this issue!
Robert Kroeger
Comment 5 2012-03-12 14:49:06 PDT
Robert Kroeger
Comment 6 2012-03-12 14:50:54 PDT
New patch: updates the Gtk skipped file (hopefully correctly.)
James Robinson
Comment 7 2012-03-13 12:31:02 PDT
Comment on attachment 131417 [details] Patch OK. I hope you get a chance to clean this up soon.
WebKit Review Bot
Comment 8 2012-03-13 12:56:19 PDT
Comment on attachment 131417 [details] Patch Rejecting attachment 131417 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: -commit-queue/ Parsed 3 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/page/EventHandler.cpp patching file LayoutTests/platform/gtk/Skipped Hunk #1 FAILED at 1595. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/gtk/Skipped.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'James Robi..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/11948655
Robert Kroeger
Comment 9 2012-03-14 10:51:27 PDT
WebKit Review Bot
Comment 10 2012-03-15 15:14:01 PDT
Comment on attachment 131881 [details] Patch Clearing flags on attachment: 131881 Committed r110893: <http://trac.webkit.org/changeset/110893>
WebKit Review Bot
Comment 11 2012-03-15 15:14:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.