REGRESSION (r110371): broke platform/gtk/scrollbars/overflow-scrollbar-horizontal-wheel-scroll.html https://bugs.webkit.org/show_bug.cgi?id=80825

Patch by Robert Kroeger <rjkroege@chromium.org> on 2012-03-15
Reviewed by James Robinson.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleWheelEvent): Corrected a typo.

Canonical link: https://commits.webkit.org/98455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110893 268f45cc-cd09-0410-ab3c-d52691b4dbfc